--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
 		"watch-routes": "tsr watch"
 	},
 	"dependencies": {
+		"@emailjs/browser": "^4.4.1",
 		"@radix-ui/react-accordion": "^1.2.11",
 		"@radix-ui/react-slot": "^1.2.3",
+		"@sentry/browser": "^10.3.0",
 		"@tanstack/react-router": "^1.121.12",
 		"@tanstack/router-devtools": "^1.121.12",
 		"class-variance-authority": "^0.7.1",
@@ -22,7 +24,9 @@
 		"lucide-react": "^0.515.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"tailwind-merge": "^3.3.1"
+		"react-helmet-async": "^2.0.5",
+		"tailwind-merge": "^3.3.1",
+		"web-vitals": "^5.1.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.25.0",
