--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
 		"tailwind-merge": "^3.3.1",
 		"web-vitals": "^5.1.0"
 	},
+	"optionalDependencies": {
+		"@rollup/rollup-linux-x64-gnu": "^4.43.0"
+	},
 	"devDependencies": {
 		"@eslint/js": "^9.25.0",
 		"@shadcn/ui": "^0.0.4",
