--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@emailjs/browser": "^4.4.1",
 		"@radix-ui/react-accordion": "^1.2.11",
+		"@radix-ui/react-select": "^2.2.5",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@sentry/browser": "^10.3.0",
 		"@tanstack/react-router": "^1.121.12",
