--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-accordion": "^1.2.11",
+		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-select": "^2.2.5",
+		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-tooltip": "^1.2.8",
 		"@sentry/browser": "^10.3.0",
 		"@tanstack/react-router": "^1.121.12",
 		"@tanstack/router-devtools": "^1.121.12",
