feat(email): implement comprehensive email functionality with Cloudflare integration
Add robust email sending system with Gmail SMTP and Cloudflare Workers
- Implement contact form with validation and sanitization
- Add rate limiting and error handling
- Configure Cloudflare Pages with Functions
- Include security headers and redirects
- Add development server for local testing
- Update documentation with setup guides

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,28 @@
 # Gmail Configuration for Contact Form
-# You need to create a Gmail App Password for this to work
+# IMPORTANT: You need to create a Gmail App Password for this to work
 # Instructions: https://support.google.com/accounts/answer/185833
+# 
+# Setup Steps:
+# 1. Go to your Google Account settings
+# 2. Enable 2-Factor Authentication if not already enabled
+# 3. Go to Security > App passwords
+# 4. Generate a new app password for "Mail"
+# 5. Use the generated 16-character password below (not your regular Gmail password)
 
-# Your Gmail address
-GMAIL_USER=your-email@gmail.com
+# Sender Gmail address (configured for reach.saddat@gmail.com)
+GMAIL_USER=reach.saddat@gmail.com
 
-# Your Gmail App Password (not your regular password)
-GMAIL_APP_PASSWORD=your-app-password
+# Gmail App Password (16-character password from Google App Passwords)
+# Format: xxxx-xxxx-xxxx-xxxx (remove dashes when entering)
+GMAIL_APP_PASSWORD=your-16-character-app-password
 
-# Email address to receive contact form submissions (optional, defaults to GMAIL_USER)
-RECIPIENT_EMAIL=your-email@gmail.com
+# Primary recipient email (fixed recipient for all contact form submissions)
+RECIPIENT_EMAIL=saddathasan94@gmail.com
+
+# SMTP Configuration (Gmail defaults - usually don't need to change)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+
+# Rate limiting (requests per minute per IP)
+RATE_LIMIT_MAX=5
