--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
+		"dev:email": "node dev-server.js",
+		"dev:full": "concurrently \"npm run dev\" \"npm run dev:email\"",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview",
@@ -23,12 +25,17 @@
 		"@tanstack/router-devtools": "^1.121.12",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"concurrently": "^9.2.1",
+		"cors": "^2.8.5",
+		"dotenv": "^17.2.3",
+		"express": "^5.1.0",
 		"framer-motion": "^12.18.1",
 		"lucide-react": "^0.515.0",
-		"nodemailer": "^7.0.5",
+		"nodemailer": "^7.0.6",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-helmet-async": "^2.0.5",
+		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
 		"web-vitals": "^5.1.0"
 	},
@@ -36,11 +43,12 @@
 		"@rollup/rollup-linux-x64-gnu": "^4.43.0"
 	},
 	"devDependencies": {
+		"@cloudflare/workers-types": "^4.20241218.0",
 		"@eslint/js": "^9.25.0",
 		"@shadcn/ui": "^0.0.4",
 		"@tanstack/router-cli": "^1.121.13",
 		"@types/node": "^24.0.1",
-		"@types/nodemailer": "^6.4.17",
+		"@types/nodemailer": "^6.4.20",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"@vercel/node": "^5.3.11",
