build: add cloudflare workers types and pages output dir
Add @cloudflare/workers-types dependency for type safety and specify pages build output directory in wrangler config

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -24,6 +24,9 @@ compatibility_date = "2024-01-01"
 command = "npm run build"
 publish = "dist"
 
+# Pages build output directory
+pages_build_output_dir = "dist"
+
 # Functions configuration
 [functions]
 directory = "functions"
