feat(email): migrate from Gmail SMTP to Resend API
- Replace Gmail SMTP implementation with Resend API for email sending
- Update .env.example with Resend configuration instructions
- Improve email template styling and error handling
- Add detailed logging for debugging

--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,22 @@
-# Gmail Configuration for Contact Form
-# IMPORTANT: You need to create a Gmail App Password for this to work
-# Instructions: https://support.google.com/accounts/answer/185833
+# Resend Configuration for Contact Form
+# IMPORTANT: You need to create a Resend API key for this to work
+# Instructions: https://resend.com/docs/dashboard/api-keys
 # 
 # Setup Steps:
-# 1. Go to your Google Account settings
-# 2. Enable 2-Factor Authentication if not already enabled
-# 3. Go to Security > App passwords
-# 4. Generate a new app password for "Mail"
-# 5. Use the generated 16-character password below (not your regular Gmail password)
+# 1. Go to https://resend.com and create an account
+# 2. Navigate to API Keys in your dashboard
+# 3. Create a new API key with "Sending access"
+# 4. Copy the API key and paste it below
+# 5. Verify your domain or use a verified domain for FROM_EMAIL
 
-# Sender Gmail address (configured for reach.saddat@gmail.com)
-GMAIL_USER=reach.saddat@gmail.com
+# Resend API Key (starts with re_)
+RESEND_API_KEY=re_your_api_key_here
 
-# Gmail App Password (16-character password from Google App Passwords)
-# Format: xxxx-xxxx-xxxx-xxxx (remove dashes when entering)
-GMAIL_APP_PASSWORD=your-16-character-app-password
+# Sender email address (must be from a verified domain)
+FROM_EMAIL=noreply@yourdomain.com
 
 # Primary recipient email (fixed recipient for all contact form submissions)
 RECIPIENT_EMAIL=saddathasan94@gmail.com
-
-# SMTP Configuration (Gmail defaults - usually don't need to change)
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_SECURE=false
 
 # Rate limiting (requests per minute per IP)
 RATE_LIMIT_MAX=5
