--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,27 @@ RECIPIENT_EMAIL=saddathasan94@gmail.com
 
 # Rate limiting (requests per minute per IP)
 RATE_LIMIT_MAX=5
+
+# Supabase Configuration
+# IMPORTANT: You need to create a Supabase project for this to work
+# Instructions: https://supabase.com/docs/guides/getting-started
+# 
+# Setup Steps:
+# 1. Go to https://supabase.com and create an account
+# 2. Create a new project
+# 3. Go to Settings > API in your project dashboard
+# 4. Copy the Project URL and anon public key
+# 5. For admin operations, also copy the service_role key (keep it secure!)
+
+# Supabase Project URL
+VITE_SUPABASE_URL=https://your-project-ref.supabase.co
+
+# Supabase Anonymous Key (safe to expose in frontend)
+VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+
+# Supabase Service Role Key (KEEP SECRET - server-side only)
+SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+
+# Admin User Configuration (for initial setup)
+ADMIN_EMAIL=your-admin@example.com
+ADMIN_PASSWORD=your-secure-admin-password
