--- a/package.json
+++ b/package.json
@@ -14,30 +14,54 @@
 		"watch-routes": "tsr watch"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.2.2",
 		"@radix-ui/react-accordion": "^1.2.11",
+		"@radix-ui/react-alert-dialog": "^1.1.15",
+		"@radix-ui/react-checkbox": "^1.3.3",
 		"@radix-ui/react-dialog": "^1.1.15",
+		"@radix-ui/react-dropdown-menu": "^2.1.16",
+		"@radix-ui/react-label": "^2.1.7",
 		"@radix-ui/react-select": "^2.2.5",
 		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-switch": "^1.2.6",
+		"@radix-ui/react-tabs": "^1.1.13",
 		"@radix-ui/react-tooltip": "^1.2.8",
 		"@sentry/browser": "^10.3.0",
+		"@supabase/supabase-js": "^2.58.0",
+		"@tanstack/react-query": "^5.90.2",
 		"@tanstack/react-router": "^1.121.12",
 		"@tanstack/router-devtools": "^1.121.12",
+		"@tiptap/extension-code-block-lowlight": "^3.6.5",
+		"@tiptap/extension-image": "^3.6.5",
+		"@tiptap/extension-link": "^3.6.5",
+		"@tiptap/extension-table": "^3.6.5",
+		"@tiptap/extension-table-cell": "^3.6.5",
+		"@tiptap/extension-table-header": "^3.6.5",
+		"@tiptap/extension-table-row": "^3.6.5",
+		"@tiptap/pm": "^3.6.5",
+		"@tiptap/react": "^3.6.5",
+		"@tiptap/starter-kit": "^3.6.5",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"concurrently": "^9.2.1",
 		"cors": "^2.8.5",
+		"date-fns": "^4.1.0",
 		"dotenv": "^17.2.3",
 		"express": "^5.1.0",
 		"framer-motion": "^12.18.1",
+		"lowlight": "^3.3.0",
 		"lucide-react": "^0.515.0",
 		"nodemailer": "^7.0.6",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-helmet-async": "^2.0.5",
+		"react-hook-form": "^7.64.0",
+		"react-router-dom": "^6.28.0",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
-		"web-vitals": "^5.1.0"
+		"web-vitals": "^5.1.0",
+		"zod": "^4.1.11"
 	},
 	"optionalDependencies": {
 		"@rollup/rollup-linux-x64-gnu": "^4.43.0"
