--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"lowlight": "^3.3.0",
 		"lucide-react": "^0.515.0",
 		"nodemailer": "^7.0.6",
+		"prism-react-renderer": "^2.4.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-helmet-async": "^2.0.5",
